--- a/proyectoII/views/register.ejs
+++ b/proyectoII/views/register.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- Include Head -->
+<!--FIJARSE SI ESTAN BIEN LOS HIPERVINCULOS, O SI TIENE QUE IR DIRECTO /CSS O /IMAGES POR SER UN RECURSO ESTATICO -->
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link width="" rel="shortcut icon" href="../public/mages/logo-mercado-liebre.jpg" />
+	<link width="" rel="shortcut icon" href="../public/images/logo-mercado-liebre.jpg" />
 
 	<title> Mercado Liebre Argentina</title>
 	<!-- Font Awesome Stylesheet -->
