--- a/proyectoII/views/profile.ejs
+++ b/proyectoII/views/profile.ejs
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <!-- Include Head -->
-<!--FIJARSE SI ESTAN BIEN LOS HIPERVINCULOS, O SI TIENE QUE IR DIRECTO /CSS O /IMAGES POR SER UN RECURSO ESTATICO -->
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link width="" rel="shortcut icon" href="/images/logo-mercado-liebre.jpg" />
-	
-	<title> Mercado Liebre Argentina</title>
-			<!-- Font Awesome Stylesheet -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-	<!-- Bootstrap Grid Stylesheet -->
-	<link rel="stylesheet" href="/css/bootstrap-grid.min.css">
-	<!-- Own Stylesheet -->
-	<link rel="stylesheet" href="/css/app.css">
-</head>
+<%-include("./partials/head.ejs")%>
+
 <body>
 	<!-- Header -->
 	<header class="main-header">
