--- a/proyectoII/views/profile-edit.ejs
+++ b/proyectoII/views/profile-edit.ejs
@@ -6,9 +6,9 @@
 
 
 <body>
-    
+
 	<!-- Header -->
-	<%-include("./partials/header.ejs")%>
+	<%-include("./partials/headerLogueado.ejs")%>
 	<!-- /Header -->
 
 	<!-- Novedades -->
