--- a/proyectoII/views/profile.ejs
+++ b/proyectoII/views/profile.ejs
@@ -5,9 +5,9 @@
 <%-include("./partials/head.ejs")%>
 
 <body>
-	
+
 	<!-- Header -->
-	<%-include("./partials/header.ejs")%>
+	<%-include("./partials/headerLogueado.ejs")%>
 	<!-- /Header -->
 
 	<!-- Datos del usuario -->
