agregue nombres e images a productos

--- a/proyectoII/views/product.ejs
+++ b/proyectoII/views/product.ejs
@@ -14,7 +14,7 @@
 	<!-- product detail 1 -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Nombre del producto</h2> 
+			<h2 class="products-title"> Alo's </h2> 
 			<p class="product-detail-description">
 				<a href="/product-add">Editar</a>
 			</p>
@@ -22,7 +22,7 @@
 		<div class="product-detail">
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
-					<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+					<img src="/images/products/alos.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
 						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -88,7 +88,7 @@
 		<!-- product detail 2 -->
 		<div class="container products-wrapper">
 			<div class="d-flex align-items-center">
-				<h2 class="products-title">Nombre del producto</h2> 
+				<h2 class="products-title">Chila</h2> 
 				<p class="product-detail-description">
 					<a href="/product-add">Editar</a>
 				</p>
@@ -96,7 +96,7 @@
 			<div class="product-detail">
 				<div class="row">
 					<article class="col-12 col-lg-8 product-detail-info">
-						<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+						<img src="/images/products/chila.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
 							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -162,7 +162,7 @@
 			<!-- product detail 3  -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Nombre del producto</h2> 
+			<h2 class="products-title">Dabbang</h2> 
 			<p class="product-detail-description">
 				<a href="/product-add">Editar</a>
 			</p>
@@ -170,7 +170,7 @@
 		<div class="product-detail">
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
-					<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+					<img src="/images/products/dabbang.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
 						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -236,7 +236,7 @@
 		<!-- product detail 4 -->
 		<div class="container products-wrapper">
 			<div class="d-flex align-items-center">
-				<h2 class="products-title">Nombre del producto</h2> 
+				<h2 class="products-title">Don Julio</h2> 
 				<p class="product-detail-description">
 					<a href="/product-add">Editar</a>
 				</p>
@@ -244,7 +244,7 @@
 			<div class="product-detail">
 				<div class="row">
 					<article class="col-12 col-lg-8 product-detail-info">
-						<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+						<img src="/images/products/donjulio.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
 							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -310,7 +310,7 @@
 			<!-- product detail 5 -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Nombre del producto</h2> 
+			<h2 class="products-title">Elena</h2> 
 			<p class="product-detail-description">
 				<a href="/product-add">Editar</a>
 			</p>
@@ -318,7 +318,7 @@
 		<div class="product-detail">
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
-					<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+					<img src="/images/products/elena.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
 						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -384,7 +384,7 @@
 		<!-- product detail 6 -->
 		<div class="container products-wrapper">
 			<div class="d-flex align-items-center">
-				<h2 class="products-title">Nombre del producto</h2> 
+				<h2 class="products-title">Mishiguene</h2> 
 				<p class="product-detail-description">
 					<a href="/product-add">Editar</a>
 				</p>
@@ -392,7 +392,7 @@
 			<div class="product-detail">
 				<div class="row">
 					<article class="col-12 col-lg-8 product-detail-info">
-						<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+						<img src="/images/products/default-mishiguene.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
 							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -458,7 +458,7 @@
 			<!-- product detail 7 -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Nombre del producto</h2> 
+			<h2 class="products-title">Mudra Plant Based</h2> 
 			<p class="product-detail-description">
 				<a href="/product-add">Editar</a>
 			</p>
@@ -466,7 +466,7 @@
 		<div class="product-detail">
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
-					<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+					<img src="/images/products/mudra.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
 						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -532,7 +532,7 @@
 		<!-- product detail 8  -->
 		<div class="container products-wrapper">
 			<div class="d-flex align-items-center">
-				<h2 class="products-title">Nombre del producto</h2> 
+				<h2 class="products-title">Narda Comedor</h2> 
 				<p class="product-detail-description">
 					<a href="/product-add">Editar</a>
 				</p>
@@ -540,7 +540,7 @@
 			<div class="product-detail">
 				<div class="row">
 					<article class="col-12 col-lg-8 product-detail-info">
-						<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+						<img src="/images/products/narda.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
 							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -606,7 +606,7 @@
 			<!-- product detail 9 -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Nombre del producto</h2> 
+			<h2 class="products-title">Proper</h2> 
 			<p class="product-detail-description">
 				<a href="/product-add">Editar</a>
 			</p>
@@ -614,7 +614,7 @@
 		<div class="product-detail">
 			<div class="row">
 				<article class="col-12 col-lg-8 product-detail-info">
-					<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+					<img src="/images/products/proper.jpeg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
 						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
@@ -680,7 +680,7 @@
 		<!-- product detail 10 -->
 		<div class="container products-wrapper">
 			<div class="d-flex align-items-center">
-				<h2 class="products-title">Nombre del producto</h2> 
+				<h2 class="products-title">Tegui</h2> 
 				<p class="product-detail-description">
 					<a href="/product-add">Editar</a>
 				</p>
@@ -688,7 +688,7 @@
 			<div class="product-detail">
 				<div class="row">
 					<article class="col-12 col-lg-8 product-detail-info">
-						<img src="/images/products/default-image.png" alt="" class="product-detail-img">
+						<img src="/images/products/tegui.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
 							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
 							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
