--- a/proyectoII/views/product.ejs
+++ b/proyectoII/views/product.ejs
@@ -24,9 +24,7 @@
 				<article class="col-12 col-lg-8 product-detail-info">
 					<img src="/images/products/alos.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
-						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-						veritatis.</p>
+						Este moderno bistró, que abre para el desayuno, el almuerzo y la cena, se convirtió rápidamente en un éxito por su forma única de transformar los sabores argentinos familiares.</p>
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
@@ -98,9 +96,7 @@
 					<article class="col-12 col-lg-8 product-detail-info">
 						<img src="/images/products/chila.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
-							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-							veritatis.</p>
+							La cocina de este restaurante en igual medidas coqueto y vanguardista. Podés ir a probar su menú fijo de productos locales y de estación, con foco puesto en la identidad cultural argentina</p>
 					</article>
 					<div class="col-12 col-lg-4">
 						<section class="comments">
@@ -162,7 +158,7 @@
 			<!-- product detail 3  -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Dabbang</h2> 
+			<h2 class="products-title">Gran Dabbang</h2> 
 			<p class="product-detail-description">
 				<a href="/product-add">Editar</a>
 			</p>
@@ -172,9 +168,7 @@
 				<article class="col-12 col-lg-8 product-detail-info">
 					<img src="/images/products/dabbang.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
-						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-						veritatis.</p>
+						Tal vez uno de los restaurantes de la lista más difíciles de encasillar. La comida tiene mucha influencia de platos y street food asiático, pero no es un restaurante asiático. Se siente bastante argentino. </p>
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
@@ -246,9 +240,7 @@
 					<article class="col-12 col-lg-8 product-detail-info">
 						<img src="/images/products/donjulio.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
-							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-							veritatis.</p>
+							La parrilla palermitana está en boca de todos, no solo porque tuvo el puesto más alto en la lista latina, sino que además, fue el único restaurant de nuestro país en integrar la lista mundial, en el puesto 34..</p>
 					</article>
 					<div class="col-12 col-lg-4">
 						<section class="comments">
@@ -320,9 +312,7 @@
 				<article class="col-12 col-lg-8 product-detail-info">
 					<img src="/images/products/elena.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
-						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-						veritatis.</p>
+						Ubicado en el hotel Four Seasons, en Buenos Aires. Elena es probablemente el lugar donde más sofisticado te sientas comiendo un bife de chorizo en Buenos Aires..</p>
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
@@ -394,9 +384,7 @@
 					<article class="col-12 col-lg-8 product-detail-info">
 						<img src="/images/products/default-mishiguene.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
-							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-							veritatis.</p>
+							Tomás Kalika, el dueño de este restaurante, es un cocinero argentino enfocado en dar una experiencia basada en el judaísmo, tanto cultural como gastronómicamente..</p>
 					</article>
 					<div class="col-12 col-lg-4">
 						<section class="comments">
@@ -468,9 +456,7 @@
 				<article class="col-12 col-lg-8 product-detail-info">
 					<img src="/images/products/mudra.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
-						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-						veritatis.</p>
+						Mudrá es una cocina vegana muy bien diseñada y ejecutada. La carta recorre todo tipo de platos: desde pizza y hamburguesas hasta sushi, pasando por pasta, tacos y pastelería..</p>
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
@@ -542,9 +528,7 @@
 					<article class="col-12 col-lg-8 product-detail-info">
 						<img src="/images/products/narda.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
-							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-							veritatis.</p>
+							El Comedor en el bajo Belgrano tiene desayunos, almuerzos, meriendas y cenas, uno más rico que el otro..</p>
 					</article>
 					<div class="col-12 col-lg-4">
 						<section class="comments">
@@ -616,9 +600,7 @@
 				<article class="col-12 col-lg-8 product-detail-info">
 					<img src="/images/products/proper.jpeg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
-						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-						veritatis.</p>
+						De afuera este garage sobre calle Araoz poco te va a llevar a un restaurante en esta lista, pero todo eso se borra cuando probás el primer plato..</p>
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
@@ -690,9 +672,7 @@
 					<article class="col-12 col-lg-8 product-detail-info">
 						<img src="/images/products/tegui.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
-							Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-							sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-							veritatis.</p>
+							El mega reconocido y ya a esta instancia histórico proyecto de Germán Martitegui sigue ocupando los primero puestos de la lista. Con un precio fijo, es una experiencias gastronómicas por pasos pionera en la utilización de producto local de altísima calidad.</p>
 					</article>
 					<div class="col-12 col-lg-4">
 						<section class="comments">
