forms de las vistas

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,11 +17,33 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de registro. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+			<h2 class="col-12"> 
+				<form>
+				<ul>
+				  <li>
+				   <label for="nombre">Nombre:</label>
+				   <input type="text" id="nombre" name="user_nombre">
+				 </li>
+				 <li>
+					 <label for="apellido">Apellido:</label>
+					 <input type="text" id="apellido" name="user_apellido">
+				 </li>
+				 <li>
+					<label for="sexo">sexo:</label> <br>
+					<input type="radio" id="sexo" name="user_sexo" value="masculino"> masculino <br>
+					<input type="radio" id="sexo" name="user_sexo" value="femenino"> femenino <br>
+				 </li>
+				 <li>
+					 <label for="mail">Correo electrónico:</label>
+					 <input type="email" id="mail" name="user_mail">
+				 </li>
+				 <li>
+					 <label for="contraseña">Contraseña:</label>
+					 <input type="password" id="contraseña" name="user_contraseña">
+				 </li>
+					 <input type="submit" value="Registrarse">  
+			   </ul>
+			  </form>
 			</h2>
 
 
