--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,11 +17,19 @@
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de login. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+			<h2 class="col-12"> 
+				<form>
+				<li>
+					<label for="mail">Correo electrónico:</label>
+					<input type="email" id="mail" name="user_mail">
+				</li>
+				<li>
+					<label for="contraseña">Contraseña:</label>
+					<input type="password" id="contraseña" name="user_contraseña">
+				</li>
+					<input type="submit" value="Iniciar sesión">  
+
+				</form>
 			</h2>
 
 
