--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -17,11 +17,23 @@
 				<h2 class="products-title">Agregar productos</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario para agregar prodcutos al catálogo. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos. <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+			<h2 class="col-12"> 
+				<form>
+					<ul>
+					  <li>
+					   <label for="producto">Nombre del producto</label>
+					   <input type="text" id="product_nombre" name="product_nombre">
+					 </li>
+					 <li>
+						 <label for="foto">Foto del producto:</label>
+						 <input type="image" id="image" name="product_image">
+					 </li>
+					 <li>
+						<label for="descripcion">descripcion del producto:</label>
+						<textarea name="descripcion"></textarea>
+					 </li>
+					    <input type="submit" value="Agregar producto">  
+				  </form>
 			</h2>
 
 
