--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -18,11 +18,41 @@
 				<h2 class="products-title">Editar mi perfil</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de edición de datos del perfil de usuario. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos deñ usuario<br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+			<h2 class="col-12"> 
+				<form>
+					<ul>
+					  <li>
+					   <label for="nombre">Nombre:</label>
+					   <input type="text" id="nombre" name="user_nombre">
+					 </li>
+					 <li>
+						 <label for="apellido">Apellido:</label>
+						 <input type="text" id="apellido" name="user_apellido">
+					 </li>
+					 <li>
+						<label for="usuario">Nombre de usuario:</label>
+						<input type="text" id="usuario" name="user_usuario">
+					</li>
+					 <li>
+						<label for="sexo">sexo:</label> <br>
+						<input type="radio" id="sexo" name="user_sexo" value="masculino"> masculino <br>
+						<input type="radio" id="sexo" name="user_sexo" value="femenino"> femenino <br>
+					 </li>
+					 <li>
+						 <label for="mail">Correo electrónico:</label>
+						 <input type="email" id="mail" name="user_mail">
+					 </li>
+					 <li>
+						 <label for="contraseña">Contraseña actual:</label>
+						 <input type="password" id="contraseña" name="user_contraseña">
+					 </li>
+					 <li>
+						<label for="contraseña">Contraseña nueva:</label>
+						<input type="password" id="contraseña" name="user_contraseña">
+					</li>
+						 <input type="submit" value="Guardar cambios">  
+				   </ul>
+				  </form>
 			</h2>
 
 
