--- a/views/product.ejs
+++ b/views/product.ejs
@@ -10,6 +10,8 @@
 	<%-include("./partials/header.ejs")%>
 	<!-- /Header -->
 
+	<div class="seccionprincipal"> 
+	
 	
 	<!-- product detail 1 -->
 	<div class="container products-wrapper">
@@ -730,7 +732,7 @@
 			</div>
 		</div>
 		<!-- /product detail -->
-
+	</div>
 	<!-- footer -->
 	<%-include("./partials/footer.ejs")%>
 	<!-- /footer -->
