--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -35,7 +35,7 @@
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
 						<i class="fas fa-hand-holding-usd"></i>
-						Todas las opiniones en un solo lugar.
+						Comer bien, es vivir bien.
 					</a>
 				</div>
 			</div>
@@ -46,13 +46,13 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar">
-					<li><a href="/">Todos los productos</a></li>
-					<li><a href="/product-add">Cargar productos</a></li>
+					<li><a href="/">Favoritos</a></li>
+					<li><a href="/product-add">Añadir favoritos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
 					<li><a href="/profile">
-							Nombre del usuario <i class="fas fa-user"></i>
+							Tomas Rogel <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
