--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,12 +14,12 @@
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="https://via.placeholder.com/150" alt="foto de perfil" class="foto-perfil">
+				<img src="https://previews.123rf.com/images/sanneberg/sanneberg1611/sanneberg161100860/65642082-retrato-de-hombre-feliz-sonriendo-para-la-c%C3%A1mara.jpg" alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title">Nombre del usuario 
-						<a href="/profile-edit">
+					<h1 class="main-title"> Federico Roca
+				
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
@@ -41,18 +41,32 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Mis productos</h2>
+				<h2 class="products-title">Restaurantes favoritos</h2>
 			</div>
 			<!-- Show mis productos -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/chila.jpg" alt="chila">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<h2> Chila</h2>
+							<p>Coqueto y vanguardista</p>
+							<p>Comentarios: 5</p>
+						</article>
+					</a>
+				</section>
+			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/tegui.jpg" alt="Tegui">
+						</figure>
+						<article class="product-box_data">
+							<h2>Tegui</h2>
+							<p>Experiencia de sabores</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -62,12 +76,53 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/donjulio.jpg" alt="don julio">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Don julio</h2>
+							<p> Parrilla palermitana, en boca de todos</p>
+							<p>Comentarios: 22</p>
+						</article>
+					</a>
+				</section>
+			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/elena.jpg" alt="cafetera moulinex">
+						</figure>
+						<article class="product-box_data">
+							<h2>Elena</h2>
+							<p> Sofisticado y confortable, un lujo de Buenos Aires.</p>
+							<p>Comentarios: 41</p>
+						</article>
+					</a>
+				</section>
+			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/mudra.jpg" alt="cafetera moulinex">
+						</figure>
+						<article class="product-box_data">
+							<h2>Mudra</h2>
+							<p>Cocina vegana para degustar todo tipo de platos</p>
+							<p>Comentarios: 11</p>
+						</article>
+					</a>
+				</section>
+			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/mishiguene.jpg" alt="cafetera moulinex">
+						</figure>
+						<article class="product-box_data">
+							<h2>Mishiguene</h2>
+							<p>Una experiencia basada en el judaísmo, tanto cultural como gastronómicamente</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -77,12 +132,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/narda.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Narda</h2>
+							<p>Desayunos, almuerzos, meriendas y cenas, uno más rico que el otro</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -92,72 +146,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/proper.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Proper</h2>
+							<p>Solo hace falta probar el primer bocado para sentir el sabor a familia</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
