--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,27 +21,29 @@
 				<form>
 				<ul>
 				  <li>
-				   <label for="nombre">Nombre:</label>
-				   <input type="text" id="nombre" name="user_nombre">
+				   <label class="form-label" for="nombre">Nombre:</label>
+				   <input class="form-input" type="text" id="nombre" name="user_nombre">
 				 </li>
 				 <li>
-					 <label for="apellido">Apellido:</label>
-					 <input type="text" id="apellido" name="user_apellido">
+					 <label class="form-label" for="apellido">Apellido:</label>
+					 <input class="form-input" type="text" id="apellido" name="user_apellido">
 				 </li>
 				 <li>
-					<label for="sexo">sexo:</label> <br>
-					<input type="radio" id="sexo" name="user_sexo" value="masculino"> masculino <br>
-					<input type="radio" id="sexo" name="user_sexo" value="femenino"> femenino <br>
+					<label class="form-label" for="sexo">sexo:</label> <br>
+					<input class="imputradio"  type="radio" id="sexo" name="user_sexo" value="masculino"> <br>
+					<p class="radio">Masculino</p> 
+					<input  class="imputradio" type="radio" id="sexo" name="user_sexo" value="femenino"><br>
+					 <p class="radio">Femenino</p> 
 				 </li>
 				 <li>
-					 <label for="mail">Correo electrónico:</label>
-					 <input type="email" id="mail" name="user_mail">
+					 <label class="form-label" for="mail">Correo electrónico:</label>
+					 <input class="form-input" type="email" id="mail" name="user_mail">
 				 </li>
 				 <li>
-					 <label for="contraseña">Contraseña:</label>
-					 <input type="password" id="contraseña" name="user_contraseña">
+					 <label class="form-label" for="contraseña">Contraseña:</label>
+					 <input class="form-input" type="password" id="contraseña" name="user_contraseña">
 				 </li>
-					 <input type="submit" value="Registrarse">  
+					 <input class="form-input" type="submit" value="Registrarse">  
 			   </ul>
 			  </form>
 			</h2>
