--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,16 +19,17 @@
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12"> 
 				<form>
+					<ul>
 				<li>
-					<label for="mail">Correo electrónico:</label>
-					<input type="email" id="mail" name="user_mail">
+					<label class="form-label" for="mail">Correo electrónico:</label>
+					<input class="form-input" type="email" id="mail" name="user_mail">
 				</li>
 				<li>
-					<label for="contraseña">Contraseña:</label>
-					<input type="password" id="contraseña" name="user_contraseña">
+					<label class="form-label" for="contraseña">Contraseña:</label>
+					<input class="form-input" type="password" id="contraseña" name="user_contraseña">
 				</li>
-					<input type="submit" value="Iniciar sesión">  
-
+					<input class="form-input" type="submit" value="Iniciar sesión">  
+					</ul>
 				</form>
 			</h2>
 
