cambios de css en home y register nada mas

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,7 @@
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12"> 
 				<form>
-				<ul>
+				<ul class= "registracionItems">
 				  <li>
 				   <label for="nombre">Nombre:</label>
 				   <input type="text" id="nombre" name="user_nombre">
@@ -29,7 +29,7 @@
 					 <input type="text" id="apellido" name="user_apellido">
 				 </li>
 				 <li>
-					<label for="sexo">sexo:</label> <br>
+					<br><label for="sexo">Sexo:</label> <br>
 					<input type="radio" id="sexo" name="user_sexo" value="masculino"> masculino <br>
 					<input type="radio" id="sexo" name="user_sexo" value="femenino"> femenino <br>
 				 </li>
@@ -41,7 +41,7 @@
 					 <label for="contraseña">Contraseña:</label>
 					 <input type="password" id="contraseña" name="user_contraseña">
 				 </li>
-					 <input type="submit" value="Registrarse">  
+					 <input type="submit" id= "submit" value="Registrarse">  
 			   </ul>
 			  </form>
 			</h2>
