--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,13 +6,14 @@
 
 /*====== Variables ======*/
 :root {
-  --yellow: #b3a08a;
+  --yellow: #d0c0a4;
   --dark-blue: #c2bb97;
   --light-blue: #4a2e3b;
   --gray: #4a2e3b;
-  --light-gray: #c2bb97;
+  --light-gray: #b3a08a;
   --green: #d9c183;
-  --base-font-family: 'Roboto', sans-serif
+  --base-font-family: 'Roboto', sans-serif;
+  --black: #111111;
 }
 
 
@@ -88,26 +89,31 @@ hr {
   position: relative;
   display: flex;
   align-items: center;
+  
 }
-
+::placeholder{
+  color: white;
+}
 .search-form_input {
-  border: solid 1px var(--light-gray);
+  border: solid 1px #ffffff;
   display: block;
   width: 100%;
   padding: 7px 35px 7px 7px;
   border-radius: 3px;
   height: 40px;
   font-size: 1.5em;
+  background-color: black;
+  color: white
 }
 
 .search-form_button {
   position: absolute;
   right: 2px;
   height: 60%;
-  background-color: #ffffff;
+  background-color: #111111;
   border: none;
-  border-left: solid 1px var(--light-gray);
-  color: var(--gray);
+  border-left: solid 1px #111111;
+  color: white;
   cursor: pointer;
 }
 
@@ -115,7 +121,7 @@ hr {
 /*====== Main Navbar ======*/
 .btn-toggle-navbar {
   background-color: var(--dark-blue);
-  color: #ffffff;
+  color: #111111;
   font-size: 1.5em;
   border: none;
   border-radius: 4px;
@@ -261,7 +267,7 @@ hr {
 
 /*====== Footer ======*/
 .main-footer {
-  background-color: #ffffff;
+  background-color: #d0c0a4;
   padding: 20px 0;
   margin-top: 80px;
 }
@@ -298,7 +304,58 @@ hr {
   padding: 15px 0;
 }
 
+.col-12{
+  color:#f9f8f4;
+  margin-top: 8px;
+ 
+  
+  
+}
+form.col-12{
+  margin: 10px;
+  font-size: 20px;
 
+}
+#nombre{
+  margin-bottom: 10px;
+  background-color: #111111;
+  border-color: white;
+  width: 17%;
+}
+
+
+#apellido{
+margin-top: 14x;
+background-color: #111111;
+border-color: white;
+width: 17%;
+}
+
+#sexo{
+margin-top: 14px;
+}
+#mail{
+  margin-top: 14px;
+  background-color: #111111;
+  border-color: white;
+  width: 17%;
+}
+
+#contraseña{
+  margin-top: 14px;
+  background-color: #111111;
+  border-color: white;
+  width: 17%;
+}
+
+#submit{
+  margin-top: 14px;
+  background-color: #111111;
+  border-color: white;
+  width: 17%;
+  color: white;
+  height: 40px
+}
 /*====== Product Detail ======*/
 .product-detail {
   background-color: #ffffff;
@@ -528,10 +585,5 @@ textarea.form-input {
   .footer-data {
     width: 95%;
     margin: auto;
-  }
-
-  .seccionprincipal{
-    display: grid;
-    grid-template-columns: 45% 45%;
   }
 }
