--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,42 +18,37 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12"> 
-				<form>
+				<form class="tablaRegistracion">
 				<ul class= "registracionItems">
-				  <li>
+				  <li class="bordear">
 				   <label class="form-label" for="nombre">Nombre:</label>
 				   <input class="form-input" type="text" id="nombre" name="user_nombre">
 				 </li>
-				 <li>
+				 <li class="bordear">
 					 <label class="form-label" for="apellido">Apellido:</label>
 					 <input class="form-input" type="text" id="apellido" name="user_apellido">
 				 </li>
-				 <li>
-<<<<<<< HEAD
-					<br><label for="sexo">Sexo:</label> <br>
-					<input type="radio" id="sexo" name="user_sexo" value="masculino"> masculino <br>
-					<input type="radio" id="sexo" name="user_sexo" value="femenino"> femenino <br>
-=======
-					<label class="form-label" for="sexo">sexo:</label> <br>
-					<input class="imputradio"  type="radio" id="sexo" name="user_sexo" value="masculino"> <br>
+				 <li class="bordear">
+
+					<label class="form-label" for="sexo">Sexo:</label> <br>
+					<input class="imputradio"  type="radio" id="sexo" name="user_sexo" value="masculino" > 
 					<p class="radio">Masculino</p> 
-					<input  class="imputradio" type="radio" id="sexo" name="user_sexo" value="femenino"><br>
+					
+					<input  class="imputradio" type="radio" id="sexo" name="user_sexo" value="femenino">
 					 <p class="radio">Femenino</p> 
->>>>>>> a6e05c59463155bc11d54d2527d653ae565378c5
+
 				 </li>
-				 <li>
+				 <li class="bordear">
 					 <label class="form-label" for="mail">Correo electrónico:</label>
 					 <input class="form-input" type="email" id="mail" name="user_mail">
 				 </li>
-				 <li>
+				 <li class="bordear">
 					 <label class="form-label" for="contraseña">Contraseña:</label>
 					 <input class="form-input" type="password" id="contraseña" name="user_contraseña">
 				 </li>
-<<<<<<< HEAD
-					 <input type="submit" id= "submit" value="Registrarse">  
-=======
-					 <input class="form-input" type="submit" value="Registrarse">  
->>>>>>> a6e05c59463155bc11d54d2527d653ae565378c5
+
+					 <input class="form-input" type="submit"  value="Registrarse">  
+
 			   </ul>
 			  </form>
 			</h2>
