--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,7 +20,7 @@
 			<h2 class="col-12"> 
 				<form class="tablaRegistracion">
 				<ul class= "registracionItems">
-				  <li class="bordear">
+				  <li class="bordearDiferente">
 				   <label class="form-label" for="nombre">Nombre:</label>
 				   <input class="form-input" type="text" id="nombre" name="user_nombre">
 				 </li>
