--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -21,7 +21,7 @@
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
 					<a href="/" class="main-header_home-link">
-						<img src="/images/logo-mercado-liebre.svg">
+						<img src="/images/Logo.png">
 					</a>
 				</div>
 	
@@ -33,7 +33,7 @@
 				</div>
 	
 				<div class="col-12 col-md-4">
-					<a class="main-header_credit-link">
+					<a class="main-header_credit-link"></a>
 						<i class="fas fa-hand-holding-usd"></i>
 						Comer bien, es vivir bien.
 					</a>
