--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
 
             <div class="col-12 col-md-4">
                 <a class="main-header_credit-link">
-                    <i class="fas fa-hand-holding-usd"></i>
+                    
                     Comer bien, es vivir bien..
                 </a>
             </div>
@@ -28,7 +28,7 @@
 
         <nav class="main-navbar">
             <ul class="left-navbar">
-                <li><a href="/">Todos los productos</a></li>
+                <li id="todosLosP"><a href="/">Todos los productos</a></li>
                 <!-- solo logueado <li><a href="">Cargar productos</a></li> -->
             </ul>
 
@@ -44,11 +44,11 @@
                         </button>
                     </form>
                 </li> -->
-                <li>
+                <li class="registrar">
                     <a href="/register">Creá tu cuenta <i class="far fa-address-card"></i>
                     </a>
                 </li>
-                <li>
+                <li class="registrar">
                     <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
                 </li>
             </ul>
