--- a/public/css/app.css
+++ b/public/css/app.css
@@ -183,7 +183,6 @@ margin-left: 15px ;
   font-size: 30px;
 }
 
-
 /*====== Banner ======*/
 .banner {
   background-image: url(/images/img-home-banner.jpg);
@@ -191,7 +190,9 @@ margin-left: 15px ;
   background-size: cover;
   background-position: center center;
   height: 100px;
+  margin-bottom: 90px;
 }
+
 
 
 /*====== Products ======*/
