--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,26 +3,23 @@
         <div class="row">
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
-                    <i class="fas fa-credit-card"></i>
-                    <h2>Pagá con tarjeta o en efectivo</h2>
-                    <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
-                        siempre es seguro!</p>
+                    <i class="fas fa-percentage"></i>
+                    <h2>Descuentos por ser parte de BAgastro</h2>
+                    <p>Registrate en nuestra plataforma para obtener cupones de descuento en los mejores restaurantes de Buenos Aires!</p>
                 </article>
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
-                    <i class="fas fa-gift"></i>
-                    <h2>Envío gratis desde $ 1.999</h2>
-                    <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
-                        beneficio de Mercado Puntos.</p>
+                    <i class="fas fa-newspaper"></i>
+                    <h2>Sé el primero en conocer las novedades</h2>
+                    <p>Al estar registrado, recibiras notificaciones cuando un restaurante haga cambios en su menú, precio, ofertas y demás.</p>
                 </article>
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
-                    <i class="fas fa-user-shield"></i>
-                    <h2>Seguridad, de principio a fin</h2>
-                    <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
-                        siempre protegido.</p>
+                    <i class="fas fa-user-secret"></i>
+                    <h2>Anonimato</h2>
+                    <p>¿Querés hacer un comentario, sin que se vea tu usuario? ya sea una queja, crítica constructiva o halago. En BAgastro tenés la opción de dejar comentarios anónimos acerca los restaurantes.</p>
                 </article>
             </div>
         </div>
